--- a/.github/workflows/GenerateSnake.yml
+++ b/.github/workflows/GenerateSnake.yml
@@ -1,54 +1,26 @@
-# GitHub Action for generating a contribution graph with a snake eating your contributions.
-
-name: Generate Snake
-
-# Controls when the action will run. This action runs every 6 hours.
-
+name: GenerateSnake
 on:
-  schedule:
-      # every 6 hours
-    - cron: "0 */6 * * *"
-
-# This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
+  schedule:
+    - cron: "0 1 * * *"
 
-# The sequence of runs in this workflow:
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  update-repository:
+    name: Update this repo's README with repository_owner
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-
-    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-      - uses: actions/checkout@v2
-
-    # Generates the snake  
-      - uses: Platane/snk@master
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Generate Snake
+        uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: kataokaHBSS
-          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
-
-     # show the status of the build. Makes it easier for debugging (if there's any issues).
-      - run: git status
-
-      # Push the changes
-      - name: Push changes
-        uses: ad-m/github-push-action@master
+          github_user_name: ${{ github.repository_owner }}
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN_SNAKE　 }}
+          gif_out_path: ./img/snake.gif
+          svg_out_path: ./img/snake.svg
+      - name: Push to GitHub
+        uses: EndBug/add-and-commit@v7.2.1
         with:
-          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN_SNAKE }}
-          branch: master
-          force: true
-
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
-        with:
-          # the output branch we mentioned above
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN_SNAKE}}
+          branch: main  
+          message: ':rocket: Update'
